# sars_cov2_slovakia

./: .gitignore  CMakeLists.txt  Makefile  README.md
config/: .gitignore  R_1.6_with_tests.yml  business_as_usual.yml  config_example.yml  config_restrictions_example.yml  config_validation_wuhan.yml  plot_example.json
config/examples/: restrictions_icu_example.json
data/: age_symptoms.json  households.json  infected.txt  municipalities.csv  municipalities.txt
python/: CalculateNMeetingsFromR.py  ConvertPickleToTextFile.py  PrepareTable.py  PrepareTableFromMiso.py  SimpleSEIR.py  merge_mun_data
python/plotting/: plot
sars_cov2_sk/: ConfigParser.h  Constants.h  CovidTest.h  HelperFunctions.h  Household.h  InputData.h  InputInfo.h  Logging.h  NetworkBase.h  Person.h  PopulationCenter.h  ROutToReffConvertor.h  RandomGeneratorPoisson.h  RandomGenerators.h  Restrictions.h  Simulation.h  linkdef.h
src/: ConfigParser.cxx  CovidTest.cxx  HelperFunctions.cxx  Household.cxx  InputData.cxx  InputInfo.cxx  Logging.cxx  NetworkBase.cxx  Person.cxx  PopulationCenter.cxx  ROutToReffConvertor.cxx  RandomGeneratorPoisson.cxx  RandomGenerators.cxx  Restrictions.cxx  Simulation.cxx  main.cxx
